--- a/billing/templates/billing/invoice_list.html
+++ b/billing/templates/billing/invoice_list.html
@@ -1,118 +1,89 @@
-{% extends "core/base_bs.html" %}
-{% load i18n %}
-{% load humanize %}
-{% load staticfiles %}
-{% load auth_tokens %}
+{% extends 'core/object_list_base.html' %}
+{% load i18n humanize static %}
 
-{% block page_title %}
-<title>{{ config.company_name }} - {% trans "Invoices" %}</title>
-{% endblock %}
 {% block head_style %}
     {{ block.super }}
-    <link href="{% static 'ikwen/css/console.css' %}" media="screen" rel="stylesheet" type="text/css" />
-    <link href="{% static 'ikwen/css/grids.css' %}" media="screen" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'embed-doc/css/embed-doc.css' %}"/>
     <style>
-        table.grid tbody tr td.payment-method a.button {height: 19px; padding-top: 3px; width: 72px}
-        form#filter input {height: 21px}
+        #pending-invoices {margin-top: 40px;}
+        .v-align { display: flex; align-items: center; justify-content: flex-start }
+        .v-align-center { align-self: center; }
+        .event-icon {height: 60%}
+        .due-date.pending .event-title {color: #888}
+        .due-date.overdue .event-title, .due-date.exceeded .event-title {color: #d31b00}
+        .fa.fa-circle.color-paid {display: none}
+        @media (min-width: 768px) {
+            #pending-invoices {margin-top: 60px;}
+            .ik-li .actions {right: 38px; top: -3px}
+        }
+        @media (max-width: 767px) {
+            #pending-invoices .payment-start {margin-top: 10px;}
+        }
     </style>
 {% endblock %}
 
-{% block header_brand %}
-<div class="navbar-header">
-    <a class="navbar-brand" href="{% url 'home' %}">
-        <strong>{{ service.project_name }}</strong>
-    </a>
-</div>
-{% endblock %}
-
-{% block content  %}
-    <div id="content" class="container">
-            <h3>{% trans "My Invoices" %}</h3>
-            {% if invoices %}
-                {# TODO: Implement Invoice list filter #}
-{#                <form id="filter" style="float: right">#}
-{#                    <div style="width: 260px">#}
-{#                        <input type="text" placeholder="{% trans "From" %}" id="id_due_date_start"  class="date start due_date" style="width: 120px">#}
-{#                        <input type="hidden" name="due_date_start" />#}
-{#                        <input type="text" placeholder="{% trans "To" %}" id="id_due_date_finish"  class="date end due_date" style="width: 120px">#}
-{#                        <input type="hidden" name="due_date_finish" />#}
-{#                    </div>#}
-{#                    <button class="confirm" style="height: 25px; margin: 1px 0 0 7px; padding: 2px 0 3px; text-align: center; width: 100px">{% trans "Filter" %}</button>#}
-{#                </form>#}
-                {% if pending_invoices_count > 1 %}
-                    <div id="pending-summary"></div>
-                {% endif %}
-                <div class="" style="float: left; margin: 24px 0">
-                    <table cellspacing="0" class="grid">
-                        <thead>
-                            <tr>
-                                <td style="width: 300px">{% trans "Product" %}</td>
-                                <td style="width: 160px">{% trans "Amount" %}</td>
-                                <td style="width: 150px">{% trans "Due date" %}</td>
-                                <td style="width: 180px">{% trans "Payment" %}</td>
-                                <td style="width: 150px">{% trans "Method" %}</td>
-                                <td></td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for invoice in invoices %}
-                                <tr class="invoice {{ invoice.status|lower }}" id="{{ invoice.id }}">
-                                    <td class="item">App:{{ invoice.service.app.name }} / <em>{{ invoice.service.project_name }}</em></td>
-                                    <td class="amount">{{ currency_symbol }} {{ invoice.amount|intcomma }}</td>
-                                    <td class="due_date">{{ invoice.due_date }}</td>
-                                    <td class="paid_on">{{ invoice.paid_on }}</td>
-                                    <td class="payment-method">{{ invoice.method }}</td>
-                                    <td class="action" style="padding: 6px 10px 7px; text-align: center">
-                                        {% url 'billing:invoice_detail' invoice.id as invoice_detail_url %}
-                                        <a href="{{ invoice_detail_url|append_auth_tokens:request }}" class="button default">{% trans "Details" %}</a>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            {% else %}
-                <div>
-                    {% trans "No pending invoice" %}
-                </div>
-            {% endif %}
-        <div class="clear"></div>
-    </div>
-{% endblock %}
-{% block footer %}
-    <footer>
-        <div class="container" style="height: 130px; padding-top: 30px">
-            <nav style="float: left">
-                <ul>
-                    {% if contact_url %}
-                        <li> <a href="{{ contact_url }}">{% trans "Contact" %}</a> </li>
+{% block admin_content %}
+    <div id="admin-content">
+        <div class="container-fluid stage">
+            {% include 'core/snippets/admin_tools.html' %}
+            <div class="col-lg-8 col-lg-offset-2">
+                <div id="pending-invoices">
+                    {% if is_customer %}
+                        <h4 style="margin-bottom: 20px">{% blocktrans %}{{ pending_invoice_count }} pending invoice(s){% endblocktrans %}</h4>
                     {% endif %}
-                    {% if about_url %}
-                        <li> <a href="{{ about_url }}">{% trans "About us" %}</a> </li>
-                    {% endif %}
-                </ul>
-            </nav>
-            <div style="color: #888; float: right; font-size: .9em; margin-top: 1px; text-align: right">
-                &copy; {{ year }} <a href="{{ website_url }}" style="color: #666; text-decoration: none"><strong>{{ company_name }}</strong></a>.
-                {% trans "All rights reserved." %}
-                {% if legal_mentions_url %}
-                - <a href="{{ legal_mentions_url }}" style="color: #666; text-decoration: none">{% trans "Legal mentions" %}</a>
+                    {% for invoice in pending_invoice_list %}
+                        {% url 'billing:invoice_detail' invoice.id as invoice_url %}
+                        <div class="event">
+                            <div class="subtle-shade event-detail">
+                                <div class="event-icon pull-left">
+                                    <img src="{% static 'ikwen/img/invoice-icon.png' %}" />
+                                </div>
+                                <div class="event-content">
+                                    <div>
+                                        <a href="{{ invoice_url }}" class="col-sm-6 row" style="font-size: 1.2em">{{ invoice }}</a>
+                                        <div class="col-sm-4 event-date text-muted pull-right text-right hidden-xs" style="padding-right: 0;">{{ invoice.created_on|date }}</div>
+                                        <div class="clearfix"></div>
+                                    </div>
+                                    <div class="due-date {{ invoice.status|lower }}">
+                                        <span>{% trans "Due date" %}: </span>
+                                        <span class="event-title">{{ invoice.due_date|date }}</span>
+                                    </div>
+                                    <h3>
+                                        <strong>{{ invoice.amount|intcomma }}</strong>
+                                        <span class="text-muted" style="font-size: .6em">{{ currency_symbol }}</span>
+                                    </h3>
+                                    <div class="actions">
+                                        <button class="btn btn-success pull-right btn-sm payment-start"
+                                                data-product-id="{{ invoice.id }}"> {% trans "Pay now" %}</button>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    {% endfor %}
+                </div>
+                {% if is_customer %}
+                <h5 style="margin-bottom: -15px">{% trans "History" %}</h5>
                 {% endif %}
-            </div>
-            <div style="color: #888; border-top: solid 1px #DDD; clear: both; float: right; font-size: .9em; margin-top: 6px; padding-top: 3px; text-align: right; width: 100%">
-                {% blocktrans %}
-                    Powered by <a href="{{ settings.IKWEN_BASE_URL|append_auth_tokens:request }}" style="color: #666; text-decoration: none"><strong>ikwen</strong></a> &reg;.
-                {% endblocktrans %}
+                <div id="results" style="padding-top: 0">
+                    {% include html_results_template_name %}
+                </div>
             </div>
         </div>
-    </footer>
-    <script>
+    </div>
+    {% with payment_conf='invoice_payment' %}
+        {% include 'billing/snippets/modal_payment_options.html' %}
+    {% endwith %}
+{% endblock %}
+
+{% block js %}
+    {{ block.super }}
+    <script type="text/javascript">
         (function() {
-            $('div#lightbox .dialog .close').click(function() {
-                $('#lightbox').hide('normal', function() {
-                    $('div#lightbox .dialog').hide()
-                })
-            });
+            var target = '{{ verbose_name_plural|slugify }}' ? '{{ verbose_name_plural|slugify }}' : 'blank';
+            $('div#admin-nav .' + target).addClass('active');
         })()
     </script>
 {% endblock %}
