.event .btn {min-width: 120px} instead of {width: 120px}

--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -39,7 +39,7 @@ body {color: #464646;}
 #content .errorlist.username li, #content .errorlist.phone li {list-style-type: disc}
 
 .event {list-style-type: none; margin-bottom: 30px; padding: 0 !important;}
-.event .btn {width: 120px;}
+.event .btn {min-width: 120px;}
 .event-content {padding: 15px;margin-left: 90px;border-left: 1px solid #ddd;}
 .event-content p {margin-top: 10px;}
 .event-detail {border: 1px solid #ddd;margin-top: 10px;}
