--- a/core/templates/core/snippets/uploader_single.html
+++ b/core/templates/core/snippets/uploader_single.html
@@ -59,7 +59,8 @@
                 'model_name': '{{ model_name }}',
                 'object_id': '{{ obj.id }}',
                 'image_field_name': '{{ image_field_name }}',
-                'label_field_name': '{{ label_field_name }}'
+                'label_field_name': '{{ label_field_name }}',
+                'upload_to_ikwen': '{{ upload_to_ikwen }}'
             }
         });
         $('#delete-image').click(function() {
