--- a/billing/templates/billing/invoice_list.html
+++ b/billing/templates/billing/invoice_list.html
@@ -12,6 +12,7 @@
         .due-date.pending .event-title {color: #888}
         .due-date.overdue .event-title, .due-date.exceeded .event-title {color: #d31b00}
         .fa.fa-circle.color-paid {display: none}
+        #admin-tools {display: none}
         @media (min-width: 768px) {
             #pending-invoices {margin-top: 60px;}
             .ik-li .actions {right: 38px; top: -3px}
