Special inputs for fields of type models.DateField or models.DateTimeField. Some classes are added such that those inputs are turned into DatePickers

--- a/core/templates/core/change_object_base.html
+++ b/core/templates/core/change_object_base.html
@@ -55,6 +55,13 @@
             $('.form-row').addClass('form-group');
             $('.form-row input, .form-row select, .form-row textarea').addClass('form-control input-sm');
             $('.form-row textarea').addClass('form-control input-sm');
+            $('.date-field').each(function() {
+                var alt = $(this).data('alt');
+                $(this).datepicker({
+                    altField: alt,
+                    altFormat: "yy-mm-dd"
+                });
+            });
         })()
     </script>
 {% endblock %}
