--- a/core/templates/core/snippets/model_admin_form.html
+++ b/core/templates/core/snippets/model_admin_form.html
@@ -6,7 +6,8 @@
         <div class="form-row{% if line.fields|length_is:'1' and line.errors %} errors{% endif %}{% for field in line %}{% if field.field.name %} field-{{ field.field.name }}{% endif %}{% endfor %}">
             {% if line.fields|length_is:'1' %}{{ line.errors }}{% endif %}
             {% for field in line %}
-                <div{% if not line.fields|length_is:'1' %} class="field-box{% if field.field.name %} field-{{ field.field.name }}{% endif %}{% if not field.is_readonly and field.errors %} errors{% endif %}"{% elif field.is_checkbox %} class="checkbox-row"{% endif %}>
+                <div{% if not line.fields|length_is:'1' %} class="field-box{% if field.field.name %} field-{{ field.field.name }}{% endif %}{% if not field.is_readonly and field.errors %} errors{% endif %}"
+                    {% elif field.is_checkbox %} class="checkbox-row"{% endif %}>
                     {% if not line.fields|length_is:'1' and not field.is_readonly %}{{ field.errors }}{% endif %}
                     {% if field.is_checkbox %}
                         {{ field.field }}{{ field.label_tag }}
@@ -14,6 +15,9 @@
                         {{ field.label_tag }}
                         {% if field.is_readonly %}
                             <p>{{ field.contents|linebreaksbr }}</p>
+                        {% elif field.field.name in date_field_list %}
+                            <input type="hidden" id="{{ field.field.name }}-alt" name="{{ field.field.name }}" value="{{ field.field.value|date:"Y-m-d" }}" />
+                            <input type="text" id="id_{{ field.field.name }}" value="{{ field.field.value|date:"Y-m-d" }}" class="date-field" data-alt="#{{ field.field.name }}-alt" />
                         {% else %}
                             {{ field.field }}
                         {% endif %}
