--- a/core/templates/core/snippets/uploader_single.html
+++ b/core/templates/core/snippets/uploader_single.html
@@ -11,16 +11,22 @@
             <span class="progress"></span>
             <div class="uploader"></div>
             {% include 'core/snippets/spinner.html' %}
+            <a href="{% if upload_to_ikwen %}{{ settings.IKWEN_MEDIA_URL }}{% else %}{% get_media_prefix %}{% endif %}{{ image.name }}"
+               class="full-view" target="_blank">
+                <i class="fas fa-eye"></i>
+                <div class="clearfix"></div>
+            </a>
         </div>
     </div>
     <p class="help clear">
-        {% if image.name %}
+        {% if image.name and not read_only_img %}
         <i id="delete-image" class="glyphicon glyphicon-trash" title="{% trans "Delete image" %}"></i>
         {% endif %}
-        <span>{{ img_help_text }}</span>
+        <span style="padding-left: 30px">{{ img_help_text }}</span>
     </p>
 </section>
 
+{% if not read_only_img %}
 <script type="text/javascript">
     (function() {
         $('.form-row').addClass('form-group');
@@ -69,3 +75,4 @@
         });
     })()
 </script>
+{% endif %}
